--- a/.gitignore
+++ b/.gitignore
@@ -128,4 +128,4 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-git rm --cached .DS_Store
+find . -name .DS_Store -print0 | xargs -0 git rm --ignore-unmatch
